--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@
 ### Build directories ###
 */bin
 */build
+packages/swpackages/*
+packages/swpackages/
 
 ### misc. directories ###
 /vision/FOOTAGE
@@ -26,3 +28,7 @@
 *.png
 *.jpeg
 *.jpg
+
+## cook variables ##
+packages/.cookvars
+
